2007-09-03  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs: Removed some debug code.

2007-09-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Added null check. Should fix
	  bug #82553.

2007-08-31  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.CodeTemplates/CodeTemplatePanel.cs,
	  MonoDevelop.Ide.CodeTemplates/CodeTemplateService.cs,
	  MonoDevelop.Ide.CodeTemplates/TemplateCompletionDataProvider.cs,
	  MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/AddInsOptionsPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/LoadSavePanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/BuildPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/ExternalToolPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/SelectStylePanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/TasksOptionsPanel.cs,
	  MonoDevelop.Ide.Gui.OptionPanels/CodeGenerationPanel.cs,
	  MonoDevelop.Ide.Templates/FileTemplate.cs,
	  MonoDevelop.Ide.Templates/TextTemplate.cs,
	  MonoDevelop.Ide.Templates/ProjectTemplate.cs,
	  MonoDevelop.Ide.Commands/ViewCommands.cs,
	  MonoDevelop.Ide.Commands/FileCommands.cs,
	  MonoDevelop.Ide.Commands/ToolsCommands.cs,
	  MonoDevelop.Ide.Commands/EditCommands.cs,
	  MonoDevelop.Ide.Commands/CustomStringTagProvider.cs,
	  MonoDevelop.Ide.Commands/DebugCommands.cs,
	  MonoDevelop.Ide.Commands/WindowCommands.cs,
	  MonoDevelop.Ide.Commands/HelpCommands.cs,
	  MonoDevelop.Ide.ExternalTools/ExternalToolService.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectSolutionPad.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Dialogs/TipOfTheDay.cs,
	  MonoDevelop.Ide.Gui.Dialogs/IncludeFilesDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/ReplaceDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/DirtyFilesDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/FileSelectorDialog.cs,
	  MonoDevelop.Ide.Gui.Dialogs/CommonAboutDialog.cs,